Small content modificaiton

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
         <title>Hello Coursera</title>
     </head>
     <body>
-    <h1>Hello Coursera</h1>
+    <h1>Hello Coursera. Hopefully this will be great course - I truly believe that it will be superb.</h1>
     </body>
 </html>
