--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -21,7 +21,8 @@
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#target-for-collapsed-btn" aria-expanded="false">
+          <button type="button" class="navbar-toggle collapsed visible-xs" data-toggle="collapse" data-target="#target-for-collapsed-btn"
+            aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -261,16 +262,11 @@
     </div>
   </div>
 
-
-  <p>
-
-
-
-    <!-- jQuery (Bootstrap JS plugins depend on it) -->
-    <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- My javascript definitions -->
-    <script src="js/script.js"></script>
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-1.11.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <!-- My javascript definitions -->
+  <script src="js/script.js"></script>
 
 </body>
 
