more functionality is added

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -18,6 +18,7 @@
     </div>
 
     <!-- found-items should be implemented as a component -->
+    <div class="row col-xs-12">{{controller.searchFeedbackMessage}}</div>
     <found-items class="row"
         found="controller.found" 
         title="{{controller.title}}" 
