--- a/module3-solution/foundItems.html
+++ b/module3-solution/foundItems.html
@@ -1,10 +1,27 @@
 <div ng-if="list.hasListItems()">
 <h3>Title: {{ list.listTitle }}</h3>
-<ol>
+<!--<ol>
   <li ng-repeat="item in list.found">
-    {{ item.name }}
+    {{ item.name }} {{item.short_name}} {{item.description}}
     <button ng-click="list.onRemove({index: $index})">Don't want this one!</button>
   </li>
-</ol>
+</ol>-->
+<table class="table">
+  <thead class="thead-inverse">
+    <tr>
+      <th>#</th>
+      <th>Name</th>
+      <th>Short name</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr ng-repeat="item in list.found">
+      <th scope="row">{{$index+1}}</th>
+      <td>{{ item.name }}</td>
+      <td>{{item.short_name}}</td>
+      <td>{{item.description}}</td>
+    </tr>
+  </tbody>
+</table>
 </div>
-
