title text correction

--- a/module3-solution/foundItems.html
+++ b/module3-solution/foundItems.html
@@ -1,5 +1,5 @@
 <div ng-if="list.hasListItems()">
-<h3>Title: {{ list.listTitle }}</h3>
+<h3>{{ list.listTitle }}</h3>
 <!--<ol>
   <li ng-repeat="item in list.found">
     {{ item.name }} {{item.short_name}} {{item.description}}
