more functionality is added

--- a/module4-solution/src/categories.template.html
+++ b/module4-solution/src/categories.template.html
@@ -1,2 +1,2 @@
 <div>This is categories content</div>
-<categories items="categoryList.categoryItems" test="categoryList.test"></categories>
+<categories items="categoryList.categoryItems"></categories>
