--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -11,7 +11,7 @@
     <div class="tabs">
       <a ui-sref="home" ui-sref-active="activeTab">home</a>
       <a ui-sref="categories" ui-sref-active="activeTab">categories</a>
-      <a ui-sref="items" ui-sref-active="activeTab">items</a>
+      <!-- <a ui-sref="items" ui-sref-active="activeTab">items</a> -->
       <!-- <button ui-sref="tab2">Tab 2</button> -->
     </div>
 
