--- a/module4-solution/src/categoriesList.template.html
+++ b/module4-solution/src/categoriesList.template.html
@@ -1,6 +1,7 @@
 <ul>
-  <li ng-repeat="item in $ctrl.items">
-    {{ item.name }}
+  <li ng-repeat="item in $ctrl.items"> 
+    <a ui-sref="items({categoryShortName: $ctrl.items[$index].short_name})">
+      {{ item.short_name }} {{ item.name }}</a>
   </li>
 </ul>
 
