--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -29,12 +29,12 @@
     <script src="src/routes.js"></script>
 
     <!-- Components -->
-    <script src="src/categories.component.js"></script>
-    <script src="src/items.component.js"></script>
+    <script src="src/categories/categories.component.js"></script>
+    <script src="src/items/items.component.js"></script>
 
     <!-- Controllers -->
-    <script src="src/categories.controller.js"></script>
-    <script src="src/items.controller.js"></script>
+    <script src="src/categories/categories.controller.js"></script>
+    <script src="src/items/items.controller.js"></script>
 
     <!-- Services -->
     <script src="src/menudata.service.js"></script>
